--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body>
   <app-root class="d-flex flex-column h-100"></app-root>
 </body>
 </html>
+
+<!--<script src="https://js.stripe.com/v3/"></script>-->
+<!--    <script type="text/javascript">-->
+<!--  const stripe   = Stripe('pk_test_51HMuwWDf2mQcDNZ9oeVmgCRTNFHELSPWniFGmbiRpCffFGD8zz4Mu49FUT9TKWQO3ubeF1zVW46dNiSh37a1PsuA00afbPNvWW');&ndash;&gt;-->
+<!--  const elements = stripe.elements();-->
+<!--</script>-->
